--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
             - id: patient-service-route
               uri: http://patient-service:4000
               predicates:
-                - Path=/api/patients/getPatients/**
+                - Path=/api/patients/**
               filters:
                 - StripPrefix=1
 
