--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <modules>
         <module>patient-service</module>
         <module>billing-service</module>
+        <module>analytics-service</module>
+        <module>api-gateway</module>
+        <module>auth-service</module>
     </modules>
 
     <properties>
@@ -23,7 +26,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.2.5</version>
+                <version>3.5.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
