--- a/portal/frontend/package.json
+++ b/portal/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
