--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.36</version>
+        </dependency>
+
     </dependencies>
 
     <build>
